Fixed FindBugs warnings Updated copyright headers