@@ -1,6 +1,6 @@
 /*******************************************************************************
- * Copyright (c) 2012-2013
- * DevBoost GmbH, Berlin, Amtsgericht Charlottenburg, HRB 140026
+ * Copyright (c) 2012-2015
+ * DevBoost GmbH, Dresden, Amtsgericht Dresden, HRB 34001
  *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
@@ -8,7 +8,7 @@
  * http://www.eclipse.org/legal/epl-v10.html
  *
  * Contributors:
- *   DevBoost GmbH - Berlin, Germany
+ *   DevBoost GmbH - Dresden, Germany
  *      - initial API and implementation
  ******************************************************************************/
 package de.devboost.eclipse.feedback;
@@ -23,13 +23,16 @@ import de.devboost.eclipse.feedback.util.HttpMethod;
 
 class FeedbackClient {
 
+	private static final String UTF_8 = "UTF-8";
+
 	private static final String FEEDBACK_URL = "http://www.devboost.de/eclipse-feedback/";
+	
 	public static final String KEY_FEEDBACK_TYPE = "feedbacktype";
 
 	public void sendPropertiesToServer(Properties properties) {
 		ByteArrayOutputStream baos = new ByteArrayOutputStream();
 		try {
-			properties.storeToXML(baos, "");
+			properties.storeToXML(baos, "", UTF_8);
 			sendXmlOverHttp(baos.toString());
 		} catch (IOException e) {
 			FeedbackPlugin.logError("Could not send DevBoost feedback", e);
@@ -38,7 +41,7 @@ class FeedbackClient {
 
 	protected void sendXmlOverHttp(String xmlString) throws IOException {
 		// set parameters
-        String data = "data=" + URLEncoder.encode(xmlString, "UTF-8");
+        String data = "data=" + URLEncoder.encode(xmlString, UTF_8);
 		String url = FEEDBACK_URL;
 		HttpMethod method = HttpMethod.POST;
 		
